include/Win32/Physics.NewtonImport.hpp

typedef float *PFloat;
typedef int *PInteger;
typedef void * *PNewtonMesh;
typedef void * *PNewtonBody;
typedef void * *PNewtonWorld;
typedef void * *PNewtonJoint;
typedef void * *PNewtonMaterial;
typedef void * *PNewtonCollision;
typedef TNewtonUserContactPoint *PNewtonUserContactPoint;
typedef int __cdecl (*NewtonOnAABBOverlap)(const PNewtonJoint contact, float timestep, int threadIndex);
typedef void __cdecl (*NewtonContactsProcess)(const PNewtonJoint contact, float timestep, int threadIndex);
typedef int __cdecl (*NewtonOnCompoundSubCollisionAABBOverlap)(const PNewtonJoint contact, float timestep, const PNewtonBody body0, const void * collisionNode0, const PNewtonBody body1, const void * collisionNode1, int threadIndex);
typedef int __cdecl (*NewtonOnContactGeneration)(const PNewtonMaterial material, const PNewtonBody body0, const PNewtonCollision collision0, const PNewtonBody body1, const PNewtonCollision collision1, const PNewtonUserContactPoint contactBuffer, int maxCount, int threadIndex);
//-- var, const, procedure ---------------------------------------------------
#define NEWTON_API L"newton32s.dll"
extern "C" int __cdecl NewtonMaterialCreateGroupID(const PNewtonWorld newtonWorld);
extern "C" int __cdecl NewtonMaterialGetDefaultGroupID(const PNewtonWorld newtonWorld);
extern "C" void __cdecl NewtonMaterialDestroyAllGroupID(const PNewtonWorld newtonWorld);
extern "C" void * __cdecl NewtonMaterialGetUserData(const PNewtonWorld newtonWorld, int id0, int id1);
extern "C" void __cdecl NewtonMaterialSetSurfaceThickness(const PNewtonWorld newtonWorld, int id0, int id1, float thickness);
extern "C" void __cdecl NewtonMaterialSetCallbackUserData(const PNewtonWorld newtonWorld, int id0, int id1, const void * userData);
extern "C" void __cdecl NewtonMaterialSetContactGenerationCallback(const PNewtonWorld newtonWorld, int id0, int id1, NewtonOnContactGeneration contactGeneration);
extern "C" void __cdecl NewtonMaterialSetCompoundCollisionCallback(const PNewtonWorld newtonWorld, int id0, int id1, NewtonOnCompoundSubCollisionAABBOverlap compoundAabbOverlap);
extern "C" void __cdecl NewtonMaterialSetCollisionCallback(const PNewtonWorld newtonWorld, int id0, int id1, NewtonOnAABBOverlap aabbOverlap, NewtonContactsProcess process);
extern "C" void __cdecl NewtonMaterialSetDefaultSoftness(const PNewtonWorld newtonWorld, int id0, int id1, float value);
extern "C" void __cdecl NewtonMaterialSetDefaultElasticity(const PNewtonWorld newtonWorld, int id0, int id1, float elasticCoef);
extern "C" void __cdecl NewtonMaterialSetDefaultCollidable(const PNewtonWorld newtonWorld, int id0, int id1, int state);
extern "C" void __cdecl NewtonMaterialSetDefaultFriction(const PNewtonWorld newtonWorld, int id0, int id1, float staticFriction, float kineticFriction);
extern "C" void __cdecl NewtonMaterialJointResetIntraJointCollision(const PNewtonWorld newtonWorld, int id0, int id1);
extern "C" void __cdecl NewtonMaterialJointResetSelftJointCollision(const PNewtonWorld newtonWorld, int id0, int id1);
extern "C" PNewtonMaterial __cdecl NewtonWorldGetFirstMaterial(const PNewtonWorld newtonWorld);
extern "C" PNewtonMaterial __cdecl NewtonWorldGetNextMaterial(const PNewtonWorld newtonWorld, const PNewtonMaterial material);
extern "C" PNewtonBody __cdecl NewtonWorldGetFirstBody(const PNewtonWorld newtonWorld);
extern "C" PNewtonBody __cdecl NewtonWorldGetNextBody(const PNewtonWorld newtonWorld, const PNewtonBody curBody);
extern "C" void * __cdecl NewtonMaterialGetMaterialPairUserData(const PNewtonMaterial material);
extern "C" unsigned __cdecl NewtonMaterialGetContactFaceAttribute(const PNewtonMaterial material);
extern "C" PNewtonCollision __cdecl NewtonMaterialGetBodyCollidingShape(const PNewtonMaterial material, const PNewtonBody body);
extern "C" float __cdecl NewtonMaterialGetContactNormalSpeed(const PNewtonMaterial material);
extern "C" void __cdecl NewtonMaterialGetContactForce(const PNewtonMaterial material, const PNewtonBody body, const PFloat force);
extern "C" void __cdecl NewtonMaterialGetContactPositionAndNormal(const PNewtonMaterial material, const PNewtonBody body, const PFloat posit, const PFloat normal);
extern "C" void __cdecl NewtonMaterialGetContactTangentDirections(const PNewtonMaterial material, const PNewtonBody body, const PFloat dir0, const PFloat dir1);
extern "C" float __cdecl NewtonMaterialGetContactTangentSpeed(const PNewtonMaterial material, int index);
extern "C" float __cdecl NewtonMaterialGetContactMaxNormalImpact(const PNewtonMaterial material);
extern "C" float __cdecl NewtonMaterialGetContactMaxTangentImpact(const PNewtonMaterial material, int index);
extern "C" float __cdecl NewtonMaterialGetContactPenetration(const PNewtonMaterial material);
extern "C" void __cdecl NewtonMaterialSetAsSoftContact(const PNewtonMaterial material, float relaxation);
extern "C" void __cdecl NewtonMaterialSetContactSoftness(const PNewtonMaterial material, float softness);
extern "C" void __cdecl NewtonMaterialSetContactThickness(const PNewtonMaterial material, float thickness);
extern "C" void __cdecl NewtonMaterialSetContactElasticity(const PNewtonMaterial material, float restitution);
extern "C" void __cdecl NewtonMaterialSetContactFrictionState(const PNewtonMaterial material, int state, int index);
extern "C" void __cdecl NewtonMaterialSetContactFrictionCoef(const PNewtonMaterial material, float staticFrictionCoef, float kineticFrictionCoef, int index);
extern "C" void __cdecl NewtonMaterialSetContactNormalAcceleration(const PNewtonMaterial material, float accel);
extern "C" void __cdecl NewtonMaterialSetContactNormalDirection(const PNewtonMaterial material, const PFloat directionVector);
extern "C" void __cdecl NewtonMaterialSetContactPosition(const PNewtonMaterial material, const PFloat position);
extern "C" void __cdecl NewtonMaterialSetContactTangentFriction(const PNewtonMaterial material, float friction, int index);
extern "C" void __cdecl NewtonMaterialSetContactTangentAcceleration(const PNewtonMaterial material, float accel, int index);
extern "C" void __cdecl NewtonMaterialContactRotateTangentDirections(const PNewtonMaterial material, const PFloat directionVector);
extern "C" float __cdecl NewtonMaterialGetContactPruningTolerance(const PNewtonJoint contactJoint);
extern "C" void __cdecl NewtonMaterialSetContactPruningTolerance(const PNewtonJoint contactJoint, float tolerance);
extern "C" PNewtonCollision __cdecl NewtonCreateNull(const PNewtonWorld newtonWorld);
extern "C" PNewtonCollision __cdecl NewtonCreateSphere(const PNewtonWorld newtonWorld, float radius, int shapeID, const PFloat offsetMatrix);
extern "C" PNewtonCollision __cdecl NewtonCreateBox(const PNewtonWorld newtonWorld, float dx, float dy, float dz, int shapeID, const PFloat offsetMatrix);
extern "C" PNewtonCollision __cdecl NewtonCreateCone(const PNewtonWorld newtonWorld, float radius, float height, int shapeID, const PFloat offsetMatrix);
extern "C" PNewtonCollision __cdecl NewtonCreateCapsule(const PNewtonWorld newtonWorld, float radius0, float radius1, float height, int shapeID, const PFloat offsetMatrix);
extern "C" PNewtonCollision __cdecl NewtonCreateCylinder(const PNewtonWorld newtonWorld, float radio0, float radio1, float height, int shapeID, const PFloat offsetMatrix);
extern "C" PNewtonCollision __cdecl NewtonCreateChamferCylinder(const PNewtonWorld newtonWorld, float radius, float height, int shapeID, const PFloat offsetMatrix);
extern "C" PNewtonCollision __cdecl NewtonCreateConvexHull(const PNewtonWorld newtonWorld, int count, const PFloat vertexCloud, int strideInBytes, float tolerance, int shapeID, const PFloat offsetMatrix);
extern "C" PNewtonCollision __cdecl NewtonCreateConvexHullFromMesh(const PNewtonWorld newtonWorld, const PNewtonMesh mesh, float tolerance, int shapeID);
extern "C" int __cdecl NewtonCollisionGetMode(const PNewtonCollision convexCollision);
extern "C" void __cdecl NewtonCollisionSetMode(const PNewtonCollision convexCollision, int mode);
extern "C" int __cdecl NewtonConvexHullGetFaceIndices(const PNewtonCollision convexHullCollision, int face, const PInteger faceIndices);
extern "C" int __cdecl NewtonConvexHullGetVertexData(const PNewtonCollision convexHullCollision, const PFloat vertexData, PInteger strideInBytes);
extern "C" float __cdecl NewtonConvexCollisionCalculateVolume(const PNewtonCollision convexCollision);
extern "C" void __cdecl NewtonConvexCollisionCalculateInertialMatrix(const PNewtonCollision convexCollision, const PFloat inertia, const PFloat origin);
extern "C" float __cdecl NewtonConvexCollisionCalculateBuoyancyVolume(const PNewtonCollision convexCollision, const PFloat matrix, const PFloat fluidPlane, const PFloat centerOfBuoyancy);
extern "C" void * __cdecl NewtonCollisionDataPointer(const PNewtonCollision convexCollision);
using namespace Physics;